# algexpr

./: CMakeLists.txt  README.md  algexpr.cpp  algexpr.hpp  canonicalize_products.cpp  combine_like_terms.cpp  comparasion_operators.cpp  decompose_into_products.cpp  decompose_into_terms.cpp  deep_copy.cpp  distribute_exponent_over_product.cpp  distribute_exponent_over_sum.cpp  divide.cpp  evaluate_multiplication.cpp  main.cpp  math_operators.cpp  numeric_checks.cpp  simplify.cpp  simplify_term.cpp  to_string.cpp
